--- a/templates/ToP/create_company.html
+++ b/templates/ToP/create_company.html
@@ -86,33 +86,33 @@
         <div id="erp-section" class="section" style="display:none;">
             <h3>ERP Configuration</h3>
             <div>
-                <label for="{{ form.erp_url.id_for_label }}">ERP System URL:</label>
+                <label for="{{ form.erp_url.id_for_label }}">ERP Units URL:</label>
                 {{ form.erp_url }}
             </div>
 
             <div>
-                <label for="{{ form.erp_url_key.id_for_label }}">ERP System URL Key:</label>
+                <label for="{{ form.erp_url_key.id_for_label }}">ERP Units URL Key:</label>
                 {{ form.erp_url_key }}
             </div>
 
             <div>
-                <label for="{{ form.erp_url_units.id_for_label }}">ERP System Units URL:</label>
-                {{ form.erp_url_units }}
+                <label for="{{ form.erp_hold_url.id_for_label }}">ERP Un\Block URL:</label>
+                {{ form.erp_hold_url }}
             </div>
 
             <div>
-                <label for="{{ form.erp_url_units_key.id_for_label }}">ERP System Units URL Key:</label>
-                {{ form.erp_url_units_key }}
+                <label for="{{ form.erp_hold_url_key.id_for_label }}">ERP Un\Block URL Key:</label>
+                {{ form.erp_hold_url_key }}
             </div>
 
             <div>
-                <label for="{{ form.erp_url_unit.id_for_label }}">ERP System Unit URL:</label>
-                {{ form.erp_url_unit }}
+                <label for="{{ form.erp_approve_url.id_for_label }}">ERP Approve URL:</label>
+                {{ form.erp_approve_url }}
             </div>
 
             <div>
-                <label for="{{ form.erp_url_unit_key.id_for_label }}">ERP System Unit URL Key:</label>
-                {{ form.erp_url_unit_key }}
+                <label for="{{ form.erp_approve_url_key.id_for_label }}">ERP Approve URL Key:</label>
+                {{ form.erp_approve_url_key }}
             </div>
 
             <div>
