--- a/templates/ToP/pricing_model.html
+++ b/templates/ToP/pricing_model.html
@@ -783,7 +783,7 @@
 
     const groupNameToFieldNameMap = {
         'main view': 'main_view',
-        'secondary views': 'secondary_views',
+        'secondary view': 'secondary_view',
         'levels': 'levels',
         'north breeze': 'north_breeze',
         'corners': 'corners',
@@ -3406,7 +3406,7 @@
 
                 const groupNameToFieldNameMap = {
                     'main view': 'main_view',
-                    'secondary views': 'secondary_views',
+                    'secondary view': 'secondary_view',
                     'levels': 'levels',
                     'north breeze': 'north_breeze',
                     'corners': 'corners',
