--- a/templates/ToP/units_data.html
+++ b/templates/ToP/units_data.html
@@ -226,7 +226,7 @@
                     },
 
                     { title: "Interest Free Unit Price", field: "interest_free_unit_price", editor: numEditor, headerFilter: "number", formatter: "money" },
-                    { title: "Sellable Area", field: "gross_area", editor: numEditor, headerFilter: "number" },
+                    { title: "Gross Area", field: "gross_area", editor: numEditor, headerFilter: "number" },
                     { title: "Development Delivery Date", field: "development_delivery_date", editor: rowEditor, headerFilter: "input" },
                     { title: "Sales Value", field: "sales_value", editor: numEditor, headerFilter: "number", formatter: "money" },
                     { title: "Reservation Date", field: "reservation_date", editor: rowEditor, headerFilter: "input" },
@@ -279,7 +279,6 @@
 
                     { title: "Base Price", field: "base_price", editor: numEditor, headerFilter: "number", formatter: "money" },
                     { title: "Cash Price", field: "cash_price", editor: numEditor, headerFilter: "number", formatter: "money" },
-                    { title: "Final Price", field: "final_price", editor: numEditor, headerFilter: "number", formatter: "money" },
                     { title: "Discount", field: "discount", editor: numEditor, headerFilter: "number" },
 
                     { title: "Maintenance %", field: "maintenance_percent", editor: numEditor, headerFilter: "number" },
@@ -293,7 +292,7 @@
                     { title: "Special Discounts", field: "special_discounts", editor: areaEditor, headerFilter: "input" },
 
                     { title: "Main View", field: "main_view", editor: rowEditor, headerFilter: "input" },
-                    { title: "Secondary Views", field: "secondary_views", editor: rowEditor, headerFilter: "input" },
+                    { title: "Secondary View", field: "secondary_view", editor: rowEditor, headerFilter: "input" },
                     { title: "Levels", field: "levels", editor: rowEditor, headerFilter: "input" },
                     { title: "North Breeze", field: "north_breeze", editor: rowEditor, headerFilter: "input" },
                     { title: "Corners", field: "corners", editor: rowEditor, headerFilter: "input" },
